--- a/GIT_FILES/.gitconfig
+++ b/GIT_FILES/.gitconfig
@@ -13,7 +13,7 @@
     br = branch
     lg = log --oneline --graph
 
-[color]
+[color] MT
     ui = true
 
 [credential]
@@ -21,3 +21,10 @@
 
 [http]
     sslVerify = true
+[KernelData]
+kernel = MyKernel 1.0.0 -- enzo github
+user_name = KernelUser_root
+password = 12345
+ip = //seu ip aqui
+PID = //seu PID aqui
+KERNEL_BUILD_CODE = 9349;@399zOoskf82@3&3build
